--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ future==1.0.0
 iso8601==2.1.0
 Jinja2==3.1.6
 keyboard==0.13.5
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.5
 numpy==2.2.6
 opencv-python==4.12.0.88
 pillow==11.3.0
@@ -11,8 +14,8 @@ pynput==1.8.1
 pyserial==3.5
 python-xlib==0.33
 PyYAML==6.0.2
-setuptools==80.9.0
 six==1.17.0
-torch==2.5.0
-torchvision==0.20.0
+sympy==1.13.1
+torch==2.5.1+cu121
+torchvision==0.20.1+cu121
 typing_extensions==4.14.1
